# example-fastmcp

./: .gitignore  .mcp.json  README.md  pyproject.toml  server.py
