[project]
name = "example-mcp"
version = "0.1.0"
description = "CRUD SQLite MCP server example using FastMCP"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "aiosqlite>=0.20.0",
    "litecli>=1.17.1"
]

[tool.hatch.build.targets.wheel]
only-include = ["server.py", "schema.sql"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
